Change contents of main section and adjust spacing issues

--- a/style.css
+++ b/style.css
@@ -141,75 +141,67 @@ li {
   align-items: center;
 }
 
-/* Olu styles */
-
-.projects > h4 {
-  margin: 5px;
-  /* padding: 0; */
-  font-size: 1rem;
-  font-weight: bolder;
-  padding: 10px 10px 5px 20px;
+/******************RESPONSIVE***********************/
+.projects {
+  display: grid;
+  grid-template: 2.8rem auto / 1fr;
+  grid-template-areas: "header" "boxes";
 }
 
-.project-grid {
+.project-boxes {
   display: grid;
+  grid-area: boxes;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 20px;
-  padding: 0px 0px 0px 20px;
+  margin: 0 0.5rem 1.3rem 1rem;
 }
 
-.project-grid > div {
-  background-color: #ffc000;
-  border-radius: 10px 10px 10px 10px;
-  gap: 0.6rem;
+.project-boxes > div {
+  background-color: var(--color-yellow);
+  display: grid;
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px -3px var(--color-gborder);
 }
 
-.project-grid > div > div {
-  background-color: #fff;
-  border-radius: 0 10px 10px 0;
-  padding: 20px;
-  margin-left: 5px;
-  height: 135px;
-  box-shadow: 1px 1px 5px -3px var(--color-gborder);;
+.colored-border > div {
+  background-color: var(--color-white);
+  margin-left: 6px;
+  background-color: white;
+  border-radius: 0 8px 8px 0;
 }
 
-.project-grid > div > div > h5 {
-  margin: 0;
-  padding: 0;
-  font-size: 0.75rem;
-  font-weight: bolder;
+.projects h4 {
+  grid-area: header;
+  margin: 1rem 0 0 1rem;
 }
 
-.project-grid > div > div > p {
-  margin: 0;
-  padding: 0;
-  font-size: 0.75rem;
-  color: #555555;
+.white-box {
+  display: grid;
+  grid-template: 2rem 6.5rem auto/ 1fr;
+  grid-template-areas: "header" "content" "icons";
+} 
+
+.white-box h5 {
+  grid-area: header;
 }
 
-.project-grid > div {
-  position: relative;
-  height: 100%;
-  width: 100%;
+.white-box p {
+  grid-area: content;
 }
 
-.share {
-  position: absolute;
-  right: 1.25rem;
-  bottom: 0.9375rem;
+.white-box h5, .white-box p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  padding: 1rem;
 }
 
-.eye {
-  position: absolute;
-  right: 3.75rem;
-  bottom: 0.9375rem;
-}
-
-.star {
-  position: absolute;
-  right: 6.25rem;
-  bottom: 0.9375rem;
+.project-icons {
+  grid-area: icons;
+  padding: 1.2rem;
+  display: flex;
+  justify-content: end;
+  gap: 1.3rem;
 }
 
 /* Announcement Structure */
